Added / Deleted some translations
* Added some translations
* Deleted french translation

--- a/src/main/resources/templates/mitarbeiterverwaltung.html
+++ b/src/main/resources/templates/mitarbeiterverwaltung.html
@@ -67,8 +67,7 @@
 		</div>
 
 		<div th:if="${param.success}">
-			<div class="alert alert-info">The user status was successfully
-				changed.</div>
+			<div class="alert alert-info" th:text="#{mitarbeiterverwaltung.status}"></div>
 		</div>
 	</div>
 </div>
