Added right button ( next )
* Added next button ( right side )

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
 				header: {
 			    	left: 'prev',
 					center: 'title',
-			        right: 'month,agendaWeek,agendaDay,listWeek'
+			        right: 'month,agendaWeek,agendaDay,listWeek,next'
 				},
 				// customize the button names,
 				// otherwise they'd all just say "list"
