Remove buttons for Typen
Two remove buttons for Relations between Einheitentyp-Mitarbeitertyp and Einheitentyp-Materialtyp

--- a/src/main/resources/templates/mateinupdate.html
+++ b/src/main/resources/templates/mateinupdate.html
@@ -67,6 +67,9 @@
 			</script>
 		</p>
     </form>
+    <form th:action="@{/materialeinheitupdate/{id}/loeschen(id=${materialtyp_einheitentyp.id})}" th:object="${materialtyp_einheitentyp}" method="post" >
+		<button type="submit" class="bigButtons">L&ouml;schen</button>
+	</form>
 </div>
 	
 </body>
